Fix alignment of font awesome icons, checkbox, and text

--- a/problem_builder/public/css/questionnaire.css
+++ b/problem_builder/public/css/questionnaire.css
@@ -78,10 +78,13 @@
     display: table-cell;
     vertical-align: top;
     width: 28px;
+    padding-top: 3px;
+    padding-right: 5px;
 }
 
 .mentoring .choice-label {
     display: table-cell;
     vertical-align: top;
     line-height: 1.3;
+    padding-top: 4px;
 }
